--- a/rep01.html
+++ b/rep01.html
@@ -50,12 +50,14 @@
 
     <div>
       <h3>1-3 ホームページ作成</h3>
+      <div> 
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://tmdoi.github.io/web2023/">私のホームページ</a><br>
         1.内容<br>
         ないようないよう<br>
         2.感想<br>
-        かんそうかんそう<br>          
+        かんそうかんそう<br> 
+      </div>
     </div>
     
   </div>
